--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve",
+    "start:shell": "ng serve shell ",
+    "start:remote": "ng serve remote",
+    "start:home": "ng serve home",
+    "start:product": "ng serve product",
+    "start:cart": "ng serve cart",
+    "start:all": "concurrently \"npm run start:shell\" \"npm run start:remote\" \"npm run start:home\" \"npm run start:product\" \"npm run start:cart\" ",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
   "dependencies": {
+    "@angular-architects/module-federation": "^14.2.3",
     "@angular/animations": "~13.3.0",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
@@ -22,6 +30,7 @@
     "@nrwl/angular": "14.1.7",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
+    "windowed-observable": "^1.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -49,6 +58,7 @@
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.5.1",
     "jest-preset-angular": "11.1.1",
+    "ngx-build-plus": "^13.0.1",
     "nx": "14.1.7",
     "prettier": "^2.5.1",
     "ts-jest": "27.1.4",
